--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,6 +2,18 @@ spring:
   application:
     name: user-service
 
+  rabbitmq:
+    host: localhost
+    port: 5672
+    username: guest
+    password: guest
+    listener:
+      simple:
+        retry:
+          enabled: true
+          max-attempts: 3
+          initial-interval: 2000
+
   datasource:
     url: jdbc:postgresql://localhost:5432/user_service_db
     username: autoally
@@ -40,3 +52,9 @@ logging:
   level:
     com.autoally.userservice: DEBUG
     org.hibernate.SQL: DEBUG
+
+keycloak:
+  url: http://localhost:8080
+  realm: AutoAlly
+  client-id: autoally-admin
+  client-secret: 0ET5YVMMV6AcZnuMwNhc0ACi4diwmg6Z
