--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,8 @@ plugins {
     id 'java'
     id 'org.springframework.boot' version '3.2.1'
     id 'io.spring.dependency-management' version '1.1.4'
+    id 'jacoco'
+    id 'org.sonarqube' version '4.4.1.3373'
 }
 
 group = 'org.example'
@@ -46,4 +48,39 @@ dependencies {
 
 test {
     useJUnitPlatform()
+    finalizedBy jacocoTestReport
+}
+
+jacocoTestReport {
+    dependsOn test
+    reports {
+        xml.required = true
+        html.required = true
+        csv.required = false
+    }
+
+    afterEvaluate {
+        classDirectories.setFrom(files(classDirectories.files.collect {
+            fileTree(dir: it, exclude: [
+                    '**/dto/**',
+                    '**/entity/**',
+                    '**/config/**',
+                    '**/*Application*'
+            ])
+        }))
+    }
+}
+
+sonar {
+    properties {
+        property "sonar.projectKey", "Laurentiu2802_User-Service"  // ← Schimbă cu repo-ul tău
+        property "sonar.organization", "laurentiu2802"  // ← Username-ul tău
+        property "sonar.host.url", "https://sonarcloud.io"
+        property "sonar.coverage.jacoco.xmlReportPaths", "build/reports/jacoco/test/jacocoTestReport.xml"
+        property "sonar.sources", "src/main/java"
+        property "sonar.tests", "src/test/java"
+        property "sonar.java.source", "17"
+        property "sonar.exclusions", "**/dto/**, **/entity/**, **/config/**, **/*Application.java"
+        property "sonar.coverage.exclusions", "**/dto/**, **/entity/**, **/config/**, **/*Application.java"
+    }
 }
