--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,7 +3,7 @@ spring:
     name: user-service
 
   rabbitmq:
-    host: localhost
+    host: rabbitmq
     port: 5672
     username: guest
     password: guest
@@ -15,7 +15,7 @@ spring:
           initial-interval: 2000
 
   datasource:
-    url: jdbc:postgresql://localhost:5432/user_service_db
+    url: jdbc:postgresql://user-db:5432/user_service_db
     username: autoally
     password: autoally123
     driver-class-name: org.postgresql.Driver
@@ -28,7 +28,7 @@ spring:
       hibernate:
         dialect: org.hibernate.dialect.PostgreSQLDialect
         format_sql: true
-      open-in-view: false
+    open-in-view: false
 
 management:
   endpoints:
@@ -54,7 +54,7 @@ logging:
     org.hibernate.SQL: DEBUG
 
 keycloak:
-  url: http://localhost:8080
+  url: http://keycloak:8080
   realm: AutoAlly
   client-id: autoally-admin
   client-secret: FjO6C9NXlYwFIoC7BbRfQ6Bd1iav4Ffy
