--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,7 +3,7 @@ spring:
     name: user-service
 
   rabbitmq:
-    host: rabbitmq
+    host: localhost
     port: 5672
     username: guest
     password: guest
@@ -15,7 +15,7 @@ spring:
           initial-interval: 2000
 
   datasource:
-    url: jdbc:postgresql://user-db:5432/user_service_db
+    url: jdbc:postgresql://localhost:5432/user_service_db
     username: autoally
     password: autoally123
     driver-class-name: org.postgresql.Driver
